fix minor issues